Cambio toList porque no es compatible con Java 8